--- a/RMPreview.tex
+++ b/RMPreview.tex
@@ -261,23 +261,23 @@ Dynamical formation and isolated binary evolution mechanisms are of course not m
 \end{figure}
 
 
-\section{Merger rates and properties}\label{merge}
+\section{Expected properties of merging systems}\label{merge}
 
 In this section we describe the expected hallmarks of each formation scenario in the properties of observed binary black hole mergers. These properties include black hole masses, mass ratios, and spins, orbital eccentricities, formation environments, and merger rates.
 
-Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the next section for a discussion of the current state of these efforts. However, our current understanding of the merger rates and properties of binary black holes rests largely on modelling. 
+Other than the LIGO and Virgo sources, there are no known direct observations of binary black holes (except for a very speculative potential observation through microlensing \citep{Dong:2007}). As the population of gravitational wave detections grows, so will our ability to infer merger rates and typical system properties from observed data; see the next section for a discussion of the current state of these efforts. However, our current understanding of the expected merger rates and properties of binary black holes rests largely on modelling. 
 
-For the isolated binary evolution channel (\autoref{form}) this modeling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. \ajf{This next sentence is a bit confusing here: move or remove? Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.}  The merger rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}. 
-
-Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates and describe overall expectations for the parameters of merging binary black holes, including their masses, spins, and environments. The value of the back-of-the-envelope merger rate analysis is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}).
+For the isolated binary evolution channel (\autoref{form}) this modeling typically uses a population synthesis approach, i.e. forward modelling of large populations of stellar binaries distributed according to observed initial mass and separation distributions, some (small) fraction of which end up as merging binary black holes. \ajf{This next sentence is a bit confusing here: move or remove? Population synthesis techniques have also been applied to specific observed systems composed of a black hole and a Wolf-Rayet star, such as Cygnus X-1 \citep{Bulik:2008} and Cygnus X-3 \citep{CygnusX3:2012}, but whose future evolution is still uncertain.}   The merger rate predictions from population synthesis models produced prior to 2010 are summarized by \citet{ratesdoc}.
 
 
 \subsection{Merger rates}
 
+ Here, rather than delving into the details of binary evolution, we will outline high-level estimates of merger rates for each of the three candidate formation channels. The value of the back-of-the-envelope merger rate analysis below is not so much in matching the rate inferred from gravitational-wave observations a posteriori, as in setting the stage for some of the predictions of the properties of merging binaries (see below) and the discussion of evolutionary uncertainties (see \autoref{prospect}). \ajf{But would be nice to say something in this section about how these derived merger rates compare to observations -- do all three channels produce rates to OOM similar to the observed rate?}
+
 \subsubsection{Isolated binary evolution channel}
 \ajf{Need to do the same thing, at least briefly, for the other 2 channels.}
 
-In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:COMPAS}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that a stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
+In order to survive an evolutionary pathway such as the one depicted in \autoref{fig:isol_binary}, a binary must (i) have the right masses to form two black holes; (ii) have the right separation to avoid a premature merger, yet be close enough to interact; (iii) avoid disruption by supernova kicks; (iv) engage in and survive a common envelope phase; and (v) end up sufficiently compact at binary black hole formation to merge within the age of the Universe. We describe below the development of a ``Drake equation'' for the probability that a stellar binary will end its life as a merging binary black hole, addressing each of these five factors in turn.
 
 \begin{enumerate}
 	\item[(i)] The minimal initial stellar mass for forming a black hole is likely around 20 solar masses, so $f_\textrm{primary} \approx 0.1\%$ of all stars drawn from the \citet{Kroupa:2002} initial mass function will form black holes. Although this can be shifted somewhat by binary interactions, for the purpose of this back-of-the-envelope calculation, we will use this approximation. Meanwhile, assuming that the mass ratio between the primary and the secondary is roughly uniformly distributed \citep{Sana:2012}, typically half of the secondaries will fall into the mass range of interest, $f_\textrm{secondary} \approx 0.5$.  
@@ -351,39 +351,61 @@ The above considerations place constraints on the formation time of the systems 
 
   
 
-
 \section{Prospects for gravitational-wave astronomy}\label{prospect}
+
+\ajf{Might be worth reiterating at the start of this section that little can be said conclusively using the observations to date -- and then the next sentence about expected detection rates is more impactful -- we will know soon!}
 
 Observed rates of binary black hole mergers indicate merger rates of around $\sim 10$ to $\sim 200$ Gpc$^{-3}$ yr$^{-1}$ \citep{GW150914:rates,GW170104}, which points to the prospect of tens of detections in the next observing run and hundred \ajf{hundreds or a hundred?} within the next three years, once the LIGO and Virgo instruments reach design sensitivity \citep{scenarios}.  This will yield enough information about both individually exciting events and population distributions to use gravitational-wave astronomy as a genuine tool for exploring stellar and binary evolution.  
 
-\subsection{Individual exciting events}
-Single events that can be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black holes on both sides of the mass gap possible \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either dynamical mergers that leave the merger remnant in the dense stellar environment to be reused, or to a theoretical failure in pair instability models.  Similarly, the discovery of a merger component with a mass between $\sim 2.3 M_\odot$ and $\sim 5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on the supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
+\ajf{In this section we... describe some individually informative events and discuss some theoretical modeling techniques that will help to extract useful info from the observed data as the dataset grows in size... or something.}
 
-Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}.  A source with a detectable in-band eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}.  Meanwhile, a measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes.  A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
+\subsection{Individual exciting events}
+Single events that would be individually informative include the discovery of a merging binary black hole with a component mass in the pair-instability supernova mass gap.  Models of pair instability supernovae suggest that no black holes with masses between $\sim 60 M_\odot$ (possibly reduced to $\sim 45 M_\odot$ by pulsational pair instability \citep{Woosley:2017}) and $\sim 130 M_\odot$ should form as a result of stellar collapse, with black hole formation possible on both sides of the mass gap \citep{Marchant:2016}.  Therefore, a discovery of a single object in this mass gap would point to either past dynamical mergers that left the merger remnant to be reused in a dense stellar environment, or to a theoretical failure in pair instability models. 
+
+Similarly, the discovery of a merger component with a mass between $\sim 2.3 M_\odot$ and $\sim 5 M_\odot$, in the range between the most massive known neutron stars and least massive black holes \citep{Ozel:2010,Farr:2011} would shed light on supernova explosion models, specifically the amount of fallback that can occur before the explosion \citep{Fryer:2012}.
+
+Other individually exciting events could include the first confirmed discovery of an intermediate mass black hole in the few-hundred solar-mass range, either as a merger of two such black holes \citep[e.g.,][]{Veitch:2015,Graff:2015} or as an intermediate-mass-ratio \ajf{not sure what this means} inspiral into such an object \citep[e.g.,][]{Haster:2015IMRI,Haster:2016}. 
+
+A source with a detectable in-band \ajf{what band?} eccentricity would clearly signal a dynamical capture \citep{Breivik:2016}. 
+
+A measurement of an effective spin value close to either 1 or $-1$ would point to rapid spins of both black holes. A substantial positive effective spin coupled with high masses would point to the likelihood of chemically homogeneous formation \citep{Marchant:2016}, while a substantially negative effective spin measurement would indicate the absence of alignment, likely either through a spin tilt or dynamical formation.  
 
 \subsection{Population statistics}
-Population statistics will generally contain more information than individual events.  We can distinguish the approaches to inference on the observed populations into unmodeled or weakly modeled inference and inference that relies on accurate models. At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of the underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1} while accounting for measurement uncertainties and selection effects.  \citet{Fishbach:2017mass} use a weakly parametrized model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parametrized inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
+Population statistics will generally yield more information than individual events. \ajf{needs another intro sentence explaining what you mean by population statistics, I think, before this jumps into pretty jargony talk, and we should also say what you're trying to do with the statistical analysis} We can separate the approaches to inference on the observed populations into two types: unmodeled or weakly modeled inference, and inference that relies on accurate models. 
 
+At the most basic end of weakly modeled inference is the (possibly non-parametric) reconstruction of an underlying distribution, such as the mass function of merging black holes \citep{Mandel:2010stat,BBH:O1} while accounting for measurement uncertainties and selection effects.  \citet{Fishbach:2017mass} use a weakly parametrized model to argue for the possible evidence of a mass gap due to pair-instability supernovae, while \citet{TalbotThrane:2017} discuss weakly parametrized inference on the spin distributions.  Meanwhile, the time delay between star formation and binary merger could be extracted by comparing the merger rate as a function of redshift against the star formation rate as a function of redshift \citep{Mandel:2016select}.  
 
-We can look for clustering of events by observed parameters in the hope of finding distinct clusters of systems corresponding to different subpopulations or evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to cluster events by mass even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
+We can look for clustering of events by observed parameters in the hope of finding distinct clusters of systems corresponding to different subpopulations or evolutionary channels.  \citet{Mandel:2015} argued that $\sim 60$ observations would make it possible to cluster events by mass \ajf{why do you want to cluster them by mass?} even after allowing for the significant measurement uncertainties inherent in gravitational-wave astronomy, and \citet{Mandel:2016cluster} demonstrated the feasibility of a particular clustering technique.  Meanwhile, \citet{Farr:2018} propose classifying binary black hole mergers by spin misalignment angle into aligned and isotropically distributed subpopulations.  It is worth noting that such clustering or classification schemes cannot hope to correctly assign individual events to a specific cluster, which is generally impossible given the significant measurement uncertainties \citep{Littenberg:2015}; instead, the goal is to measure the relative frequencies of events in different categories.
 
-The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010}.  \citet{Zevin:2017} found that the mass distribution alone could be used to determine the formation channel with $\sim 100$ observations, assuming trustworthy models of the mass distribution under different formation channels are available.  \citet{Vitale:2015,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.   
+The next level of population-based inference relies on assuming that precise, possibly parametrized, subpopulation distributions are known to determine the ratios of different subpopulations (e.g., arising from different formation channels), typically using hierarchical modeling \citep[extreme deconvolution in the language of][]{Hogg:2010}. \ajf{<--- this sounds super fancy but is also pretty impenetrable for me as a non-statistician} \citet{Zevin:2017} found that with $\sim 100$ observations, the mass distribution alone could be used to determine the formation channel, assuming the availability of trustworthy models of the mass distribution under different formation channels.  \citet{Vitale:2015,Stevenson:2017spin} carry out a similar investigation for spin-orbit misalignment angles; although these cannot be measured with the same accuracy as chirp masses, several hundred observations should again be sufficient to distinguish multiple formation channels through hierarchical modelling if the distributions under different channels are known \citep{Stevenson:2017spin}.  \ajf{I think the two examples here help explain what the start of the paragraph was about, but I still suggest trying to provide an initial explanation that's on a par with some of the astrophysics explanations in the article}
 
-Of course, there is a multitude of uncertain physics within a given model.  How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and the common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
+\subsection{Advanced population synthesis techniques}
+There is, of course, a multitude of uncertain physics within any given model. \ajf{and this is a limitation for the above population statistics models?} How much mass do stars lose in winds, and what is the precise impact of metallicity and rotation on stellar evolution \citep[e.g.,][]{Renzo:2017}?  What happens to the star's angular momentum during collapse, how much mass is ejected, and how much of an asymmetric kick does the star receive \citep[e.g.,][]{Mirabel:2016}? How conservative is mass transfer in binaries and how much angular momentum is carried away by the mass lost from the binary during non-conservative mass transfer \citep[e.g.,][]{vandenHeuvel:2017}?  What are the conditions for the onset of a common-envelope phase and common envelope ejection, and how does the binary change in the process \citep[e.g.,][]{Ivanova:2013}?   How do dynamical interactions affect binary evolution?  And, in turn, how do massive stellar binaries and their compact remnants feed back into astrophysics and cosmology on all scales?
 
-One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Early  efforts relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to explore the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet phase and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
+One approach to addressing these big questions is to use the framework of population synthesis, which makes it possible to parametrize the uncertain physics and predict the expected source rates and distributions under different models.  Early efforts \ajf{the references are to 2012 and 2015 articles -- this does not sound particularly early} relied on a discrete set of a few models in the parameter space of population synthesis assumptions \citep{Dominik:2012,Stevenson:2015}.  Even with the low computational cost of population synthesis, it is not feasible to explore more than a few tens to a few hundred models, which is not sufficient to explore the full parameter space or consider the correlations between model parameters.  However, recent successes in building accurate and computationally efficient emulators over the model parameter space \citep{Barrett:2017} suggest that a full exploration of this space will soon be possible. \citet{Barrett:2017FIM} applied Fisher information matrix techniques to the space of model parameters and found that parameters such as mass loss rates during the Wolf-Rayet phase and common envelope energetics can be measured to the level of a few percent with a thousand detections. 
 
 \subsection{Other datasets and future missions}
-More observational data sets will further aid in interpreting gravitational-wave observations.  Future missions raise the prospect of observing evolution of populations of merging binaries -- or event individual systems -- across a broad band of gravitational-wave frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012} to the LIGO/Virgo band.  Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  %\todo{More details -- brief summary of Lorentz center workshop?}
+Additional observational data sets will further aid in interpreting gravitational-wave observations and in refining models of binary stellar evolution.
 
-The most useful additional constraints, however, are likely to come from comparing other data sets with gravitational-wave observations and demanding that any evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc.   Incorporating these constraints will make it possible to resolve these degeneracies and build a concordance model of massive binary evolution.  %\todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
+Future gravitational-wave missions raise the prospect of observing the evolution of populations of merging binaries -- or individual systems -- across a broad band of frequencies, from the millihertz \citep[e.g.,][]{Sesana:2016} through the decihertz \citep{Mandel:2017} and hertz \citep{ET:2012}, to the LIGO/Virgo band.  \ajf{say briefly why this would be informative?}
+
+Although electromagnetic transients are not broadly expected to be associated with binary black hole mergers \citep[e.g.,][]{Lyutikov:2016}, any such observations would indicate the persistence of material around the merging binary \citep[e.g.,][]{deMinkKing:2017}.  %\todo{More details -- brief summary of Lorentz center workshop?}
+
+The most useful constraints are likely to come from the requirement that any candidate evolutionary model must self-consistently explain all of the available data: gravitational-wave observations, perhaps in multiple frequency bands, plus electromagnetic observations of X-ray binaries, Galactic neutron stars, gamma ray bursts, supernovae, luminous red novae, etc. Incorporating these constraints will make it possible to resolve modelling degeneracies and to build a concordance model of massive binary evolution.  %\todo{Other possible gravitational-wave sources? More details / references on XRBs, LRN, etc.?}
 
 \subsection{Outlook}
-The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their skeletal remnants, we can now use merging neutron stars and black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed!
+
+\ajf{Tie things together here before the dinosaur bit. Right now, we have a few observations and some plausible evolutionary channels. It's not possible to tell them apart yet statistically, but we have the tools in place to do so and we expect to have enough data to do so within the next few years...? }
+
+\ajf{Also: is the field generally leaning in a particular direction at the moment? Initial suspicions? And what would be surprising?}
+
+The future of gravitational-wave astronomy holds the prospect of addressing the inverse problem of massive binary stellar evolution: inferring the formation channels and their physics from observations of the merging compact-object binary population.  Like a paleontologist who uses her knowledge of anatomy to determine the appearance, eating habits, and even behaviour of extinct dinosaurs from their fossilized remnants \ajf{love it ;) }, we can now use merging black holes --- remnants of massive stars --- to probe the behaviour of those stars, and particularly their evolution in binaries \citep{MandelFarmer:2017}.   With the data to come and the theoretical developments underway, this future is brightly chirping indeed! \ajf{hmm... needs a better last sentence or two, or we need to have mentioned chirping more previously...!}
 
 
 \begin{acknowledgements}
-IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel -- who deserves special thanks for assistance with figures \ref{fig:BHremnant} and \ref{fig:Rmax}, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years.
+IM thanks all of the people who have guided him to understand stellar and binary evolution, foremost among them Selma de Mink.   The students who contributed to building COMPAS (Simon Stevenson, Alejandro Vigna G\'{o}mez, Coenraad Neijssel -- who deserves special thanks for assistance with figures \ref{fig:BHremnant} and \ref{fig:Rmax}, Jim Barrett, Sebastian Gaebel) and external collaborators (including Stephen Justham and Philipp Podsiadlowski) deserve particular thanks.  Thanks also to Cole Miller, Vicky Kalogera, and Will Farr for stimulating discussions spanning many years. 
+
+AF is grateful for the astro-tourism.
 \end{acknowledgements}
 
 \bibliographystyle{hapj}
